update table box, fix overflow

--- a/Styles/grade.css
+++ b/Styles/grade.css
@@ -154,8 +154,8 @@
 }
 .grade-table-box {
   display: block;
-  position: absolute;
-  top: 0; bottom: 0; left: 0; right: 0;
+  position: relative;
+  height: 100%;
   z-index: 1;
   border: 2px solid rgb(136, 136, 136);
   border-radius: 5px;
@@ -178,7 +178,6 @@
   background-color: rgb(136, 136, 136); /* Set the color of the scrollbar track */
   border-radius: 15px;
 }
-
 .grade-table-wrapper {
   height: 100%;
   width: 100%;
@@ -186,4 +185,33 @@
   position: relative;
   display: flex;
   flex-direction: column;
+}
+
+
+.tableDialog {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0.3rem;
+}
+.tableDialog > button > svg {
+  display: none;
+}
+.table-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgray;
+  padding: 0.5rem 0.3rem 0.5rem 0.1rem;
+  border-radius: 15px;
+}
+.table-box {
+  border: 1px solid black;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  width: 78rem;
+  overflow: auto;
 }
